k8s/applications/readarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: readarr
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: readarr
          image: linuxserver/readarr:nightly-version-0.1.0.1248
          ports:
            - name: readarr
              containerPort: 8787
          volumeMounts:
            - name: server
              mountPath: /config
              subPath: readarr
            - name: media
              mountPath: /books
              subPath: Audiobooks
            - name: media
              mountPath: /downloads
              subPath: Transmission
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: media
          persistentVolumeClaim:
            claimName: media
