k8s/applications/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  type: ClusterIP
  ports:
    - name: readarr
      port: 8787
      targetPort: readarr
